--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ body{
     color: white;
     transition: all ease 0.5s;
 }
+.search-text:focus{
+    color: #f0f0f0;
+}
 
 .btn{
     float: right;
@@ -160,11 +163,62 @@ display: flex;
     justify-content: center;
     font-weight: 500;
     text-decoration: none;
-    width: 90px;
+    width: 100px;
     box-sizing: border-box;
     height: 40px;
     color: rgb(255, 255, 255);
     border: 2px solid gray;
     display: flex;
     align-items: center;
+    border-radius: 7px;
+    
+}
+.categories a:hover{
+    background-color: #3d3d3d;
+}
+.categories option{
+    color: #000000;
+}
+
+.cart{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 50px;
+    background-color: rgba(50, 50, 50, 0.5);
+    border: 2px solid rgba(121, 121, 121, 0.5);
+}
+
+.cart a{
+    text-decoration: none;
+    color: #ffffffcb;
+}
+
+.cart:hover{
+    background-color: #ffffffcb;
+    box-shadow: 3px 3px 12px rgba(183, 180, 180, 0.3);
+    transition: all ease 0.8s;
+}
+
+.cart:hover a{
+    color: whitesmoke;
+}
+
+.shoes-logo img{
+    position: absolute;
+    left: 70px;
+    bottom: 5px;
+    height: 35px;
+}
+
+
+option{
+    background-color: #f0f0f0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    border-radius: 5px;
 }
